fixed navbar shifting buttons

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8,6 +8,10 @@ body {
     padding-bottom: 0;
 }
 
+.navbar-brand {
+    width: 50px;
+}
+
 .bottom-nav {
     padding-top: 2px;
 }
@@ -49,6 +53,7 @@ body {
 
 .page-container {
     margin-top: 75px;
+    margin-bottom: 75px;
 }
 
 #available-rides-text {
